# soroban-diff

./: .gitignore  Cargo.toml  README.md
contracts/auth/rust/: Cargo.toml
contracts/auth/rust/src/: lib.rs
contracts/auth/solidity/: auth.sol
contracts/counter/rust/: Cargo.toml
contracts/counter/rust/src/: lib.rs
contracts/counter/solidity/: counter.sol
contracts/storage/rust/: Cargo.toml
contracts/storage/rust/src/: lib.rs
contracts/storage/solidity/: storage.sol
src/: main.rs
