[package]
name = "auth-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
